--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,8 +11,13 @@ kafka-python = "^2.0.2"
 pyspark = "^3.5.2"
 great-expectations = "^1.0.5"
 kafka = "^1.3.5"
+confluent-kafka = "^2.5.3"
+apache-airflow = "^2.10.2"
 
 
+
+[tool.poetry.group.dev.dependencies]
+ipykernel = "^6.29.5"
 
 [build-system]
 requires = ["poetry-core"]
